// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input - StyledInput - basic render: StyledInput has correct default styles 1`] = `
Object {
  "::placeholder": Object {
    "color": "$theme.colors.mono700",
  },
  "backgroundColor": "transparent",
  "borderStyle": "none",
  "borderWidth": "0",
  "boxSizing": "border-box",
  "caretColor": "$theme.colors.primary",
  "color": "$theme.colors.mono1000",
  "cursor": "text",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale400",
  "width": "100%",
}
`;

exports[`Input - StyledInput - basic render: StyledInput has correct styles when compact and disabled 1`] = `
Object {
  "::placeholder": Object {
    "color": "$theme.colors.mono600",
  },
  "backgroundColor": "transparent",
  "borderStyle": "none",
  "borderWidth": "0",
  "boxSizing": "border-box",
  "caretColor": "$theme.colors.primary",
  "color": "$theme.colors.mono600",
  "cursor": "not-allowed",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "$theme.sizing.scale200",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale200",
  "width": "100%",
}
`;

exports[`Input - StyledInputContainer - basic render: StyledInputContainer has correct default styles 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono200",
  "borderColor": "$theme.colors.mono200",
  "borderRadius": "$theme.sizing.scale100",
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px transparent",
  "boxSizing": "border-box",
  "color": "$theme.colors.mono1000",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Input - StyledInputContainer - basic render: StyledInputContainer has correct styles when compact 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono100",
  "borderColor": "$theme.colors.primary400",
  "borderRadius": "$theme.sizing.scale100",
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px $theme.colors.shadowFocus",
  "boxSizing": "border-box",
  "color": "$theme.colors.mono1000",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Input - StyledInputContainer - basic render: StyledInputContainer has correct styles when disabled 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono300",
  "borderColor": "$theme.colors.mono300",
  "borderRadius": "0",
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px transparent",
  "boxSizing": "border-box",
  "color": "$theme.colors.mono600",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Input - StyledInputContainer - basic render: StyledInputContainer has correct styles when error 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono100",
  "borderColor": "$theme.colors.negative400",
  "borderRadius": "0",
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px $theme.colors.shadowError",
  "boxSizing": "border-box",
  "color": "$theme.colors.mono1000",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Input - StyledInputContainer - basic render: StyledInputContainer has correct styles when focused 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono100",
  "borderColor": "$theme.colors.primary400",
  "borderRadius": "$theme.sizing.scale100",
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px $theme.colors.shadowFocus",
  "boxSizing": "border-box",
  "color": "$theme.colors.mono1000",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Input - StyledInputContainer - basic render: StyledInputContainer has correct styles when has end enhancer 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono100",
  "borderColor": "$theme.colors.primary400",
  "borderRadius": "$theme.sizing.scale100 0 0 $theme.sizing.scale100",
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px $theme.colors.shadowFocus",
  "boxSizing": "border-box",
  "color": "$theme.colors.mono1000",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Input - StyledInputContainer - basic render: StyledInputContainer has correct styles when has start and end enhancers 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono100",
  "borderColor": "$theme.colors.primary400",
  "borderRadius": "0",
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px $theme.colors.shadowFocus",
  "boxSizing": "border-box",
  "color": "$theme.colors.mono1000",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Input - StyledInputContainer - basic render: StyledInputContainer has correct styles when has start enhancer 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono100",
  "borderColor": "$theme.colors.primary400",
  "borderRadius": "0 $theme.sizing.scale100 $theme.sizing.scale100 0",
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px $theme.colors.shadowFocus",
  "boxSizing": "border-box",
  "color": "$theme.colors.mono1000",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Input - StyledInputContainer - basic render: StyledInputContainer has correct styles when useRoundedCorners is false 1`] = `
Object {
  "backgroundColor": "#F0F0F0",
  "borderColor": "#F0F0F0",
  "borderRadius": "0px",
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px transparent",
  "boxSizing": "border-box",
  "color": "#B3B3B3",
  "display": "flex",
  "fontFamily": "\\"Helvetica Neue\\", arial, sans-serif",
  "fontSize": "12px",
  "fontWeight": "normal",
  "lineHeight": "20px",
  "transitionDuration": "0.25s",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "cubic-bezier(.2, .8, .4, 1)",
  "width": "100%",
}
`;

exports[`Input - StyledInputEnhancer - basic render: StyledInputEnhancer has correct styles when compact and end position 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono400",
  "borderRadius": "0 $theme.sizing.scale100 $theme.sizing.scale100 0",
  "color": "$theme.colors.mono900",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "paddingBottom": "$theme.sizing.scale200",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale200",
}
`;

exports[`Input - StyledInputEnhancer - basic render: StyledInputEnhancer has correct styles when default size and start position 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono400",
  "borderRadius": "$theme.sizing.scale100 0 0 $theme.sizing.scale100",
  "color": "$theme.colors.mono900",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "$theme.sizing.scale500",
  "paddingTop": "$theme.sizing.scale400",
}
`;

exports[`Input - StyledRoot - basic render: StyledRoot has correct default styles 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "display": "flex",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "width": "100%",
}
`;

exports[`Input - StyledRoot - basic render: StyledRoot has correct styles when compact 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "display": "flex",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "width": "100%",
}
`;
